# ghost_protocol

./: .gitignore  Cargo.toml  README.md
crates/ghost-core/: Cargo.toml
crates/ghost-core/src/: aead.rs  dv_schnorr.rs  kdf.rs  kex.rs  keys.rs  lib.rs  mac.rs  pow.rs  transcript.rs  types.rs
crates/ghost-node/: Cargo.toml
crates/ghost-node/src/: main.rs
crates/ghost-wire/: Cargo.toml
crates/ghost-wire/src/: dht.rs  envelope.rs  framing.rs  kad.rs  kad_rpc.rs  lib.rs  nat.rs  net.rs  quic.rs  router.rs  transport.rs  typed_router.rs
docs/: spec.md
docs/cddl/: ghost-wire.cddl
