[package]
name = "ghost-core"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1"
x25519-dalek = "2"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
zeroize = "1.6"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1"


