[package]
name = "ghost-node"
version = "0.1.0"
edition = "2021"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-wire = { path = "../ghost-wire" }
rand = "0.8"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"


